--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
-name: build
+name: ci 
 on:
   push:
     branches:
+      - master 
       - main
 jobs:
   deploy:
@@ -11,5 +12,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install mkdocs
-      - run: mkdocs gh-deploy --force --clean --verbose
+      - run: pip install mkdocs-material 
+      - run: mkdocs gh-deploy --force
