--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: ci 
+name: main
 on:
   push:
     branches:
@@ -11,7 +11,8 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: '3.10'
         cache: 'pip' # caching pip dependencies
     - run: pip install -r requirements.txt
+    - run: mkdocs build
     - run: mkdocs gh-deploy --force --clean --verbose
